Implement comprehensive CRUD APIs for Menu, Role, Permission, and RoleMenuRelation entities (#40)
* Initial plan

* Initial setup: Fix Java compatibility and establish build foundation

Co-authored-by: wlngo <85060647+wlngo@users.noreply.github.com>

* Implement core CRUD APIs for Menu, Role, Permission, and RoleMenuRelation

Co-authored-by: wlngo <85060647+wlngo@users.noreply.github.com>

* Add documentation and testing infrastructure for new CRUD APIs

Co-authored-by: wlngo <85060647+wlngo@users.noreply.github.com>

* 1. update .

* 1. update .

* 1. update.

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: wlngo <85060647+wlngo@users.noreply.github.com>
Co-authored-by: wlngo <w2252603132@gmail.com>